# hello_cargo

./: .env  Cargo.toml  Dockerfile  Dockerfile-wfm-be-compiled  Dockerfile-wfm-be-precompiled  Dockerfile-wfm-be2  Dockerfile.ori  Dockerfile.pre  Jenkinsfile-docker  Jenkinsfile-docker.ori  Makefile  README.md  docker-compose.yml
.sqlx/: query-00284b79c344fc01f37f9e7e1640539d493eb0f0d7766511c1a8e01ca7444c3f.json  query-0050f088fb3dfd11de0ec4ea9ac351c40c8ed47481d2a5a2dc2274208d1fc74d.json  query-0207213c1ca4c6c12f6da41b413d589700e66e8504007b91c778c70759750a49.json  query-06df4099c11ef6e467543baf6a0c1149707039aaa1f7f1facb7aeca99dd56023.json  query-0df5ae8ee555e5d2878b50c721a51713964789898b2ab8cd7b8745be1df9ccb7.json  query-116311cc7a828a14b326d19b8fe3b843dc085f47fae22362538ce479f2ed7950.json  query-116db9f8fb9293c2ea1a359ef295ebc380f5637fa324be84512a95d4d798f171.json  query-1c08377ba11b827ba0aac0748c29f30b90bd3e6d343f79a95d7284c940e05d7e.json  query-1eeab929367ad966889de52515649c6b5d3efcf36d7606c89335cd6a68346ae8.json  query-1f37f5ca4fd10ba1ef8fd412456788c881ad1e4cdcda5b490a29bf8cb9953901.json  query-2a2a369556012bc02002a4c196dbd2b94b8203359fe982028c21455ea46cb0aa.json  query-31e65b43fe5e0414f06ba267a79244450d2a7e1996efe7cbe0c35990f5518ae0.json  query-36900420ffca8c0553508d4d9be08e0e90a0adad889d37aa19579cbc09dc4cf1.json  query-36fd3661ff17ede7c658875631cf6bd77e9c262222f19a965d069f219bfb27e9.json  query-393363220df665045f2cd0ee07eb046db06b827b34651592d778ae9403f422ee.json  query-3bd25287bf66b3bc242bba9c841b3f12be84d601341adb4dfe5cd9849ecc4dd4.json  (+50 more)
examples/: USER-NEW.txt  (+2 more)
(+96 files in other folders)
